2004-04-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-meta-refresh-content-regexp): Allow quoted string as url.
	(w3m-meta-content-refresh-regexp): Ditto.
	(w3m-check-refresh-attribute): Decode entities.

2004-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the
	borderless group.  There are wonderful pictures, so I strongly
	recommend using asahi-html, not asahi. :)

2004-04-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-link-numbering.el (w3m-link-numbering): Quit when links have
	already been numbered.

2004-04-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-link-numbering.el (w3m-link-numbering-mode): Delete all
	overlays that display link numbers, when deactivating.

2004-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-link-numbering.el (w3m-link-numbering): Add face to
	before-string correctly under XEmacs; don't bother to delete
	overlays (suggested by TSUCHIYA-san).

2004-04-14  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-link-numbering.el (w3m-link-numbering-face): New face.
	(w3m-link-numbering): Use it.

2004-04-14  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-link-numbering.el: New file.

	* w3m.el (w3m-browse-url): Load `browse-url' before calling
	`browse-url-interactive-arg'.

2004-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-mainichi.el: Rewrite.

2004-04-12  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @indicateurl, @LaTeX, @ordf, @ordm.
	@url is now a synonym for @uref.

2004-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-anchors): No need to enable evaporation of
	overlays in XEmacs.

	* shimbun/sb-nikkei.el (shimbun-nikkei-prepare-article-markets):
	Don't show garbages if the article seems to have been expired.

2004-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-default):
	Replace `shimbun-make-header' with `shimbun-create-header' in